data/derived/comb/progs/unify/prog6249.ml.out
Characters 48-49:
  let _ = pipe [(fun x -> x+x); (fun x -> x + 3)] 3;;
                                                  ^
Error: This expression has type int but an expression was expected of type
         'a -> 'b -> 'b
